--- a/init.engineer-iOS-App/View/Base.lproj/PublishView.storyboard
+++ b/init.engineer-iOS-App/View/Base.lproj/PublishView.storyboard
@@ -27,16 +27,16 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="2QT-o7-UAT">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="545.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="550"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="發表文章 Publish" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ByZ-r8-QqA">
-                                                <rect key="frame" x="20" y="29.999999999999996" width="374" height="39.666666666666657"/>
+                                                <rect key="frame" x="20" y="30" width="374" height="42"/>
                                                 <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="36"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" keyboardDismissMode="onDrag" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Dv8-R0-Eln">
-                                                <rect key="frame" x="20" y="89.666666666666657" width="374" height="199.99999999999997"/>
+                                                <rect key="frame" x="20" y="92" width="374" height="200"/>
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="200" id="Vwz-K3-2Wo"/>
@@ -47,10 +47,10 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="H8q-XB-zfb">
-                                                <rect key="frame" x="20" y="309.66666666666669" width="374" height="32"/>
+                                                <rect key="frame" x="20" y="312" width="374" height="33"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LG8-Ih-G9e">
-                                                        <rect key="frame" x="0.0" y="0.0" width="177" height="32"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="177" height="33"/>
                                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="18"/>
                                                         <state key="normal" title="選擇主題"/>
                                                         <connections>
@@ -58,7 +58,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T7O-iQ-jwp">
-                                                        <rect key="frame" x="197" y="0.0" width="177" height="32"/>
+                                                        <rect key="frame" x="197" y="0.0" width="177" height="33"/>
                                                         <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="18"/>
                                                         <state key="normal" title="選擇字型"/>
                                                         <connections>
@@ -68,7 +68,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6tV-09-H56">
-                                                <rect key="frame" x="20" y="361.66666666666669" width="374" height="31"/>
+                                                <rect key="frame" x="20" y="365" width="374" height="31"/>
                                                 <subviews>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="nAb-az-bRZ">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -82,7 +82,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xKY-Iy-1vF">
-                                                <rect key="frame" x="20" y="412.66666666666669" width="374" height="31"/>
+                                                <rect key="frame" x="20" y="416" width="374" height="31"/>
                                                 <subviews>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zVJ-jL-EVC">
                                                         <rect key="frame" x="0.0" y="0.0" width="51" height="31"/>
@@ -96,7 +96,7 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0CJ-c0-2Ox">
-                                                <rect key="frame" x="20" y="463.66666666666663" width="374" height="32"/>
+                                                <rect key="frame" x="20" y="467" width="374" height="33"/>
                                                 <fontDescription key="fontDescription" name="FixedsysTTF" family="FixedsysTTF" pointSize="18"/>
                                                 <state key="normal" title="選擇圖片"/>
                                                 <connections>
@@ -104,13 +104,13 @@
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ENQ-US-Mog">
-                                                <rect key="frame" x="20" y="515.66666666666663" width="374" height="0.0"/>
+                                                <rect key="frame" x="20" y="520" width="374" height="0.0"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" id="Cji-fX-NMd"/>
                                                 </constraints>
                                             </imageView>
                                             <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kf5-lA-2df">
-                                                <rect key="frame" x="20" y="515.66666666666663" width="374" height="0.0"/>
+                                                <rect key="frame" x="20" y="520" width="374" height="0.0"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <attributedString key="attributedText">
                                                     <fragment>
@@ -209,7 +209,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aCz-nA-6eP">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="173.33333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="306.66666666666669"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue_screen_header" translatesAutoresizingMaskIntoConstraints="NO" id="d0n-2L-5Et">
                                                 <rect key="frame" x="20" y="30" width="374" height="0.0"/>
@@ -218,21 +218,42 @@
                                                 </constraints>
                                             </imageView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text=" " textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wjj-uI-TWJ">
-                                                <rect key="frame" x="20" y="30" width="374" height="33"/>
+                                                <rect key="frame" x="20" y="30" width="374" height="17.333333333333329"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <color key="textColor" systemColor="labelColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="1"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Lorem ipsum" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VtY-s9-XKL">
-                                                <rect key="frame" x="20" y="63" width="374" height="47.333333333333343"/>
+                                                <rect key="frame" x="20" y="47.333333333333343" width="374" height="47.333333333333343"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <color key="textColor" systemColor="labelColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G1d-DN-pr1">
+                                                <rect key="frame" x="20" y="94.666666666666657" width="374" height="149"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="to_be_continued" translatesAutoresizingMaskIntoConstraints="NO" id="qod-Pc-pF1">
+                                                        <rect key="frame" x="0.0" y="0.0" width="249.33333333333334" height="149"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="149" id="A3m-m2-FKW"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s1e-4A-gHT">
+                                                        <rect key="frame" x="249.33333333333329" y="0.0" width="124.66666666666666" height="149"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <color key="textColor" systemColor="labelColor"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    </textView>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstItem="s1e-4A-gHT" firstAttribute="width" secondItem="qod-Pc-pF1" secondAttribute="width" multiplier="0.5" id="O32-Dc-juG"/>
+                                                </constraints>
+                                            </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uch-BA-k2T">
-                                                <rect key="frame" x="20" y="110.33333333333334" width="374" height="33"/>
+                                                <rect key="frame" x="20" y="243.66666666666669" width="374" height="33"/>
                                                 <subviews>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="發文傳送門 https://kaobei.engineer" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cFX-gk-tzf">
                                                         <rect key="frame" x="0.0" y="0.0" width="267" height="33"/>
@@ -254,7 +275,7 @@
                                                 </constraints>
                                             </stackView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blue_screen_footer" translatesAutoresizingMaskIntoConstraints="NO" id="bx3-FK-1dC">
-                                                <rect key="frame" x="20" y="143.33333333333334" width="374" height="0.0"/>
+                                                <rect key="frame" x="20" y="276.66666666666669" width="374" height="0.0"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" id="bsF-cu-Ynm"/>
                                                 </constraints>
@@ -290,6 +311,10 @@
                         <outlet property="articleFooterStackView" destination="uch-BA-k2T" id="ATP-6h-GhG"/>
                         <outlet property="articleHeaderTextView" destination="wjj-uI-TWJ" id="Uj4-d7-7r9"/>
                         <outlet property="articleTextView" destination="VtY-s9-XKL" id="tCg-tF-lFg"/>
+                        <outlet property="toBeContinuedBlank" destination="s1e-4A-gHT" id="MLA-2a-twU"/>
+                        <outlet property="toBeContinuedImageHeight" destination="A3m-m2-FKW" id="Gnt-2y-twD"/>
+                        <outlet property="toBeContinuedImageView" destination="qod-Pc-pF1" id="kJm-wA-jFE"/>
+                        <outlet property="toBeContinuedStackView" destination="G1d-DN-pr1" id="GOY-mh-CxV"/>
                         <outlet property="windowsScreenFooter" destination="bx3-FK-1dC" id="0fT-RG-dk3"/>
                         <outlet property="windowsScreenFooterHeight" destination="bsF-cu-Ynm" id="xlx-NM-V3i"/>
                         <outlet property="windowsScreenHeader" destination="d0n-2L-5Et" id="yEP-d0-Qld"/>
@@ -323,6 +348,7 @@
         <image name="baseline_edit_black_24pt" width="24" height="24"/>
         <image name="blue_screen_footer" width="798" height="195"/>
         <image name="blue_screen_header" width="798" height="211"/>
+        <image name="to_be_continued" width="665" height="149"/>
         <namedColor name="backgroundColor">
             <color red="0.96700000762939453" green="0.96700000762939453" blue="0.96700000762939453" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
